--- a/WebServer/my-project/index.html
+++ b/WebServer/my-project/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfNAACewuVXcfDJZINV98_JS2ueGBT7uc"></script>
+    <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"> -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>my-project</title>
